# Cinder-NumOpt

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: CinderNumOpt.h
lib/alglib/cpp/tests/: demo.cpp  demo.out-O3
proj/cmake/: Cinder-NumOptConfig.cmake
src/: .#test.cpp  CinderNumOpt.cpp  test.cpp
